tests/functional/lang/eval-fail-undeclared-arg-import.err.exp

       … from call site
         at /pwd/lang/eval-fail-undeclared-arg-import.nix:1:1:
            1| import ./non-eval-trivial-lambda-formals.nix {
             | ^
            2|   a = "a";



       at /pwd/lang/non-eval-trivial-lambda-formals.nix:1:1:
            1| { a }: a
             | ^
            2|

       error: function 'anonymous lambda' called with unexpected argument 'b'

       Did you mean a?
